--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Lee</h1>
+					<h1>Welcome to 이성빈 home page</h1>
 					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
 				</header>
 				<footer>
