--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Welcome to Mr.이성빈 home page</h1>
-					<p>이성빈의 홈페이지의 방문을 환영합니다. / WELCOME TO MR.LEE SEONGBEEN HOMEPAGE / 欢迎访问李成彬的主页 / 李成彬のホームページへの訪問を歓迎します / Bienvenue sur la page d'accueil de Lee Seong-been 
+					<p>이성빈의 홈페이지의 방문을 환영합니다. <br /> WELCOME TO MR.LEE SEONGBEEN HOMEPAGE <br /> 欢迎访问李成彬的主页 <br /> 李成彬のホームページへの訪問を歓迎します <br /> Bienvenue sur la page d'accueil de Lee Seong-been 
 <a href="http://html5up.net">HTML5 UP</a></p>
 				</header>
 				<footer>
@@ -30,8 +30,8 @@
 				<header>
 					<div class="container">
 						<h2>*이성빈 소개</h2>
-						<p> 안녕하세요 저는 현재 대한민국 경기도 고양시 일산서구 일산동에 거주중인 이성빈이라고 합니다 현재 여자친구의 자리는 비어있으니 원하시는 분께서는 010-5245-8954로 연락바랍니다. 저의 꿈은 아직 미정이며 현재 저는 희망 진학 학과는 컴퓨터 공학과,산업디자인학과,경제학과 입니다 바쁜 사람이니 약속을 원하시는 분께서는 1주일전에는 연락주셔야 하는 점 양해 부탁드립니다. <br />
-						 Hello, my name is Sungbin Lee, and I live in Ilsan-dong, Ilsanseo-gu, Goyang-si, Gyeonggi-do. My girlfriend's seat is currently empty, so if you want it, please contact 010-5245-8954. 大家好 我是现居住在大韩民国京畿道高阳市一山西区一山洞的李成彬 目前GFRIEND的座位空着，想要的人请拨打010-5245-8954联系。</p>
+						<p> 안녕하세요 저는 현재 대한민국 경기도 고양시 일산서구 일산동에 거주중인 이성빈이라고 합니다 <br />몸무게 78KG 혈액형은 ab형이며 mbti는 infp or enfp가 나옵니다 <br /> 생일은 2007년11월 27일 현재 여자친구의 자리는 비어있으니 원하시는 분께서는 010-5245-8954로 연락바랍니다. <br /> 저의 꿈은 아직 미정이며 현재 저는 희망 진학 학과는 컴퓨터 공학과,산업디자인학과,경제학과 입니다 <br /> 바쁜 사람이니 약속을 원하시는 분께서는 1주일전에는 연락주셔야 하는 점 양해 부탁드립니다. <br />
+						 Hello, my name is Sungbin Lee, and I live in Ilsan-dong, Ilsanseo-gu, Goyang-si, Gyeonggi-do. My girlfriend's seat is currently empty, so if you want it, please contact 010-5245-8954. <br />大家好 我是现居住在大韩民国京畿道高阳市一山西区一山洞的李成彬 <br /> 目前GFRIEND的座位空着，想要的人请拨打010-5245-8954联系。</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
