--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a href="https://lisanhandsome.github.io/">maker lee seongbeen</a></p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">이성빈을 더 알아가고 싶다면 클릭하세요!</a>
+					<a href="#first" class="button scrolly">시작할려면 클릭하세요ㅛ!</a>
 				</footer>
 			</section>
 
@@ -50,12 +50,9 @@
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
 									<header>
-										<h3>Vivamus</h3>
+										<h3>V이성빈 성격</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>개착함</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
