--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a href="https://lisanhandsome.github.io/">maker lee seongbeen</a></p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">시작할려면 클릭하세요ㅛ!</a>
+					<a href="#first" class="button scrolly">시작할려면 클릭하세요!</a>
 				</footer>
 			</section>
 
@@ -41,7 +41,7 @@
 								<section>
 									<span class="feature-icon"><span class="icon fa-clock"></span></span>
 									<header>
-										<h3>이성빈의 학업</h3>
+										<h3>이성빈의 능력</h3>
 									</header>
 									<p>송포초 졸업/송산중 졸업/주엽고등학교 재학중 - 코딩동아리 수강중/ 연세대학교 컴퓨터 공학과 진학예정 / 미필</p>
 								</section>
@@ -50,9 +50,9 @@
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
 									<header>
-										<h3>V이성빈 성격</h3>
+										<h3>이성빈의 마음</h3>
 									</header>
-									<p>개착함</p>
+									<p>개착함 mbti-intp <br/>이상형 첫눈에 반할만한 얼굴 및 몸매 성격을 갖춰야함. <br/> *별로면 버림* </p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
