--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</div>
 							<div class="col-12">
 								<footer>
-									<a href="#second" class="button scrolly">Gravida tempor lacinia</a>
+									<a href="#second" class="이성빈을 더 알고 싶으면 누르시요">Gravida tempor lacinia</a>
 								</footer>
 							</div>
 						</div>
@@ -81,9 +81,9 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>Euismod sed feugiat lorem tempus magna</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>아래는 더 엄청난 내용이 있습니다 내려보세요</h2>
+						<p>궁금하지 궁금할걸??<br /> ㅋㅋㅋㅋㅋㅋㅋㅋㅋ
+					        </p>
 					</div>
 				</header>
 				<div class="content dark style2">
