--- a/index.html
+++ b/index.html
@@ -59,17 +59,14 @@
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
 									<header>
-										<h3>Accumsan</h3>
+										<h3>좋아하는 운동</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>자전거 타기, 러닝 ,걷기 , 축구 , 농구 , 배드민턴, 등 <br/>운동을 함께하실 파트너 분께서는 연락바랍니다</p>
 								</section>
 							</div>
 							<div class="col-12">
 								<footer>
-									<a href="#second" class="이성빈을 더 알고 싶으면 누르시요">Gravida tempor lacinia</a>
+									<a href="#second" class="button scrolly">이성빈을 더 알고싶다면 누르시요.</a>
 								</footer>
 							</div>
 						</div>
@@ -81,8 +78,8 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>아래는 더 엄청난 내용이 있습니다 내려보세요</h2>
-						<p>궁금하지 궁금할걸??<br /> ㅋㅋㅋㅋㅋㅋㅋㅋㅋ
+						<h2>아래는 더 엄청난 내용이 있습니다 내려보세요.</h2>
+						<p><br />
 					        </p>
 					</div>
 				</header>
@@ -91,17 +88,18 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-									augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-									lorem ipsum dolor placerat magna tempus feugiat.</p>
-									<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-									euismod lorem ipsum dolor.</p>
+									<h3>이성빈의 스펙</h3>
+									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com / seongbeenlee07@gmail.com <br/>
+									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.*
+
+
+										
+									</p>
+									<p>
+										
+									</p>
 									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
+										<a href="#third" class="button scrolly">아래에는 색다른 내용이 있습니</a>
 									</footer>
 								</section>
 							</div>
