--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet
 								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
 								<footer>
-									<a href="#fourth" class="button scrolly">이성빈을 예약하실려면 누르시요. <br/> Press to reserve Lee Seongbeen <br/> Cliquez pour réserver Lee Seongbeen <br/ > Presione para reservar una habitación para Lee Seongbeen.</a>
+									<a href="#fourth" class="button scrolly">이성빈을 예약하실려면 누르시요./ <br/> Press to reserve Lee Seongbeen /<br/> Cliquez pour réserver Lee Seongbeen /<br/ > Presione para reservar una habitación para Lee Seongbeen./</a>
 								</footer>
 							</div>
 						</div>
