--- a/index.html
+++ b/index.html
@@ -18,9 +18,80 @@
 				<header>
 					<h1>Welcome to Mr.이성빈 home page</h1>
 					<p>이성빈의 홈페이지의 방문을 환영합니다. <br /> WELCOME TO MR.LEE SEONGBEEN HOMEPAGE <br /> 欢迎访问李成彬的主页 <br함
-									</p>
-									
-									<p>
+									<p>이성빈의 홈페이지의 방문을 환영합니다. <br /> WELCOME TO MR.LEE SEONGBEEN HOMEPAGE <br /> 欢迎访问李成彬的主页 <br /> 李成彬のホームページへの訪問を歓迎します <br /> Bienvenue sur la page d'accueil de Lee Seong-been <br />
+<a href="https://lisanhandsome.github.io/">maker lee seongbeen</a></p>
+				</header>
+				<footer>
+					<a href="#first" class="button scrolly">시작할려면 클릭하세요!</a>
+				</footer>
+			</section>
+
+		<!-- First -->
+			<section id="first" class="main">
+				<header>
+					<div class="container">
+						<h2>*이성빈 소개*</h2>
+						<p> 안녕하세요 저는 현재 대한민국 경기도 고양시 일산서구 일산동에 거주중인 이성빈이라고 합니다 <br />몸무게 78KG 혈액형은 ab형이며 mbti는 infp or enfp가 나옵니다 <br /> 생일은 2007년11월 27일 현재 여자친구의 자리는 비어있으니 원하시는 분께서는 010-5245-8954로 연락바랍니다. <br /> 저의 꿈은 아직 미정이며 현재 저는 희망 진학 학과는 컴퓨터 공학과,산업디자인학과,경제학과 입니다 <br /> 바쁜 사람이니 약속을 원하시는 분께서는 1주일전에는 연락주셔야 하는 점 양해 부탁드립니다. <br />
+						 Hello, my name is Sungbin Lee, and I live in Ilsan-dong, Ilsanseo-gu, Goyang-si, Gyeonggi-do. My girlfriend's seat is currently empty, so if you want it, please contact 010-5245-8954. <br />大家好 我是现居住在大韩民国京畿道高阳市一山西区一山洞的李成彬 <br /> 目前GFRIEND的座位空着，想要的人请拨打010-5245-8954联系。</p>
+					</div>
+				</header>
+				<div class="content dark style1 featured">
+					<div class="container">
+						<div class="row">
+							<div class="col-4 col-12-narrow">
+								<section>
+									<span class="feature-icon"><span class="icon fa-clock"></span></span>
+									<header>
+										<h3>이성빈의 능력</h3>
+									</header>
+									<p>송포초 졸업/송산중 졸업/주엽고등학교 재학중 - 코딩동아리 수강중/ 연세대학교 컴퓨터 공학과 진학예정 / 미필</p>
+								</section>
+							</div>
+							<div class="col-4 col-12-narrow">
+								<section>
+									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
+									<header>
+										<h3>이성빈의 마음</h3>
+									</header>
+									<p>개착함 mbti-intp <br/>이상형 첫눈에 반할만한 얼굴 및 몸매 성격을 갖춰야함. <br/> *별로면 버림* </p>
+								</section>
+							</div>
+							<div class="col-4 col-12-narrow">
+								<section>
+									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
+									<header>
+										<h3>좋아하는 운동</h3>
+									</header>
+									<p>자전거 타기, 러닝 ,걷기 , 축구 , 농구 , 배드민턴, 등 <br/>운동을 함께하실 파트너 분께서는 연락바랍니다</p>
+								</section>
+							</div>
+							<div class="col-12">
+								<footer>
+									<a href="#second" class="button scrolly">이성빈을 더 알고싶다면 누르시요.</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		<!-- Second -->
+			<section id="second" class="main">
+				<header>
+					<div class="container">
+						<h2>아래는 더 엄청난 내용이 있습니다 내려보세요.</h2>
+						<p> 조금 더 <br /> 내려보시죠.
+					        </p>
+					</div>
+				</header>
+				<div class="content dark style2">
+					<div class="container">
+						<div class="row">
+							<div class="col-4 col-12-narrow">
+								<section>
+									<h3>이성빈의 스펙</h3>
+									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com , seongbeenlee07@gmail.com <br/>
+									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.
 									모델문의는 안받습니다.	
 									</p>
 									<footer>
