--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 							<div class="col-4 col-12-narrow">
 								<section>
 									<h3>이성빈의 스펙</h3>
-									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com , seongbeenlee07@gmail.com <br/>
+									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com,seongbeenlee07@gmail.com <br/>
 									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.
-									모델문의는 안받습니다.	
+									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽 	
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">아래에는 색다른 내용이 있습니다</a>
