--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 							<div class="col-4 col-12-narrow">
 								<section>
 									<h3>이성빈의 스펙</h3>
-									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com,seongbeenlee07@gmail.com <br/>
+									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com,     seongbeenlee07@gmail.com <br/>
 									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.
-									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽 	
+									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽(여자랑 하루종일 연락가능)	
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">아래에는 색다른 내용이 있습니다</a>
@@ -119,7 +119,7 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Ornare varius lorem ipsum ante lectus</h2>
+						<h2>오늘도 화이팅 입니다! </h2>
 						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
@@ -129,17 +129,14 @@
 						<span class="image featured"><img src="images/page 5.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu eget ornare varius
-								gravida dolore euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu
-								eget ornare et magna.</p>
+								<h3>이성빈의 오늘 뭐먹지?, 오늘 아 점 저 추천.</h3>
+								<p>아침은 간단하게 밥과 햄 아침에는 모닝커피한잔으로 기분을 내준다 아침에 빵을 먹으면 못생겨 진다는 말이있어서
+								빵은 먹지 말아준다 빵은 소세지가 같이 있는 피자빵을 추천한다 <br/> 점심은 많이 먹어야한다 왜냐하면 저녁을 많이 먹으면
+								살이찌기 때문이다 점심은 귀찮을때는 라면 빵이랑 고기가 먹고 싶을 떈 햄버거를 먹어준다 <br/> 저녁은 고급지게 먹어준다
+								닭이 떙기는 날은 치킨 입이 텁텁할때는 교촌 허니 콤보를 추천한다 빵이 먹고싶을 땐 피자를 그리고 고기가 먹고 싶을땐
+									다른 식재료와 소고기나 돼지고기를 겻들여 먹어준다 돼지고기는 김치랑 같이 먹어줘야 배운 사람이다 저녁에는 밥을
+									먹어줘야 배가 푸짐해져 야식을 안먹게 된다 저녁은 7시 넘어서 말고 5~7시 사이에 먹어줘야지 자기 전에 소화가 되어
+									살이 안찐다 <br/> *주의 먹고 바로자면 얼굴 붙고 살찜*< /p>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
