--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 				<header>
 					<div class="container">
 						<h2>오늘도 화이팅 입니다! </h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<p>학교가기 싫어도 학교에서 자면되고 밥을 먹을 수 있고 친구를 만나 놀 수 있는 마음으로 오늘도 등교를 해봅니다.<br />
+						또한 학교에 안가고 집에만 누워있으면 살이 찝니다 쉬는시간에 일어나서 놀러가야 엉덩이에 땀이 안차 안간지럽습니다.</p>
 					</div>
 				</header>
 				<div class="content dark style3">
