--- a/index.html
+++ b/index.html
@@ -139,17 +139,13 @@
 									살이 안찐다 <br/> *주의 먹고 바로자면 얼굴 붙고 살찜*< /p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat eget ornare varius gravida euismod.
-								Gravida dis lorem ipsum dolor placerat magna tempus feugiat magna tempus lorem.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia.</p>
+								<h2>이성빈의 다이어트 및 유지어트 꿑팁 </h2>
+								<p>잠을 최대한 많이 자고 아침에 일어나서 최대한 활동을 많이 해야합니다 저의 기준으로 하루에 700KCAL정도를 소모해줘야
+								살이 안찌고 유지할 수 있습니다 낮잠은 오후 5시전에 자고 1시간 미만을 자야합니다 하루에 걷기운동 30분이상을 해줘야하며 매일 저녁이나 
+							        아침에 몸무게를 재서 채중을 확인해 줍니다 점심을 많이 먹고 저녁은 7시 이전에 탄수환물을 안먹어 주고 단백질만 먹어 줍니다 자기 전까지
+								물만 먹으며 공복을 유지합니다 배가 고프면 물배를 채우거나 잠에 듭니다. 
+							
+			                                         </p>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<p>Placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui
