--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<h3>이성빈의 스펙</h3>
 									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com,     seongbeenlee07@gmail.com <br/>
 									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.
-									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽(여자랑 하루종일 연락가능)	
+									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽(여자랑 하루종일 연락가능정도의 구사)	
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">아래에는 색다른 내용이 있습니다</a>
@@ -103,7 +103,7 @@
 							<div class="col-8 col-12-narrow">
 								<div class="row">
 									<div class="col-6"><a href="#" class="image fit"><img src="images/lee seongbeen main1.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/page 2.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/page2.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
@@ -119,7 +119,8 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>오늘도 화이팅 입니다! </h2>
+					</h2> 이성빈의 목표 </h2>
+						<p> 지구에서 나를 모르면 외계인임 </p>
 					</div>
 				</header>
 				<div class="content dark style3">
