--- a/index.html
+++ b/index.html
@@ -147,15 +147,7 @@
 			                                         </p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui
-								lacinia eget ornare varius gravida. Gravida dis placerat lectus ante vel nunc
-								euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus augue
-								cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat. Lectus ante vel nunc euismod
-								est turpis sodales. Diam tempor dui lacinia dolore.</p>
-								<p>Accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida
-								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet
-								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
+								<p> LEE SEONGBEEN NUMBER ONE</p>
 								<footer>
 									<a href="#fourth" class="button scrolly">이성빈을 예약하실려면 누르시요./ <br/> Press to reserve Lee Seongbeen /<br/> Cliquez pour réserver Lee Seongbeen /<br/ > Presione para reservar una habitación para Lee Seongbeen./</a>
 								</footer>
