--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div class="row">
 									<div class="col-6"><a href="#" class="image fit"><img src="images/lee seongbeen main1.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/page2.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/page 1.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
@@ -119,7 +119,7 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-					</h2> 이성빈의 목표 </h2>
+					</h3> 이성빈의 목표 </h3>
 						<p> 지구에서 나를 모르면 외계인임 </p>
 					</div>
 				</header>
