--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 									<h3>이성빈의 스펙</h3>
 									<p>이성빈 연락처 82+ 010 5245 8954 <br/> seongbeen-lee@naver.com,     seongbeenlee07@gmail.com <br/>
 									비즈니스 문의는 07seongbeenlee@gmail.com 여기로 부탁드립니다. *염탐시 차단합니다.
-									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽(여자랑 하루종일 연락가능정도의 구사)	
+									모델문의는 안받습니다. <br/> 중국어 구사 가능 , 영어 완벽 ,한국어 초특급 완벽(여자랑 하루종일 연락가능정도의 구사)
+									태권도 4품 운동 꽤 침 수영 가능 헬스가능 3대 250침 
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">아래에는 색다른 내용이 있습니다</a>
